# is-admin

./: Cargo.toml
quork-proc/: Cargo.toml
quork-proc/src/: enum_list.rs  from_tuple.rs  lib.rs  new.rs  sized_string.rs  strip_enum.rs
quork-proc/tests/: strip_enum.rs
src/: lib.rs  root.rs  sized_string.rs  truncate.rs
src/traits/: flip.rs  into_bytes.rs  lock.rs  map.rs  mod.rs
src/traits/map/: mutex.rs
src/win/: mod.rs  network.rs
