[package]
authors = ["Juliette Cordor"]
categories = ["development-tools", "os", "os::unix-apis", "os::windows-apis"]
description = "A collection of small things that don't deserve their own crate"
documentation = "https://docs.rs/quork"
edition = "2021"
homepage = "https://github.com/jewlexx/quork.git"
keywords = ["admin", "linux", "network", "sys", "windows"]
license = "MIT OR Apache-2.0"
name = "quork"
repository = "https://github.com/jewlexx/quork.git"
rust-version = "1.69.0"
version = "0.7.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["quork-proc"]

[dependencies]
cfg-if = "1.0"
lock_api = { version = "0.4", optional = true }
quork-proc = { version = "0.3", path = "quork-proc", optional = true }
spin = { version = "0.9", optional = true }
thiserror = { version = "1.0" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_NetworkListManager",
    "Win32_Security",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[features]
all = ["macros", "network", "root", "std", "traits"]
default = ["all"]
macros = ["quork-proc"]
network = []
root = ["std"]
std = []
traits = []

[build-dependencies]
cc = "1.0"

[dev-dependencies]
is-root = "0.1"
