[package]
authors = ["Juliette Cordor"]
description = "The proc macros for quork (not intended for independant use)"
documentation = "https://docs.rs/quork"
edition = "2018"
homepage = "https://github.com/jewlexx/quork.git"
license = "MIT"
name = "quork-proc"
repository = "https://github.com/jewlexx/quork.git"
version = "0.3.2"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.5"
proc-macro-crate = "3.1"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
